src/test/resources/invalid_tests/IllegalName.cnna
architecture IllegalName{
    def input Q(-oo:+oo)^{inputs=10} in
    def output Q(0:1)^{classes=2} out
    Tg = 1

    def Fc(){
            FullyConnected(units=10)
    }

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}